--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -93,6 +93,7 @@
             <version>3.5</version>
         </dependency>
 
+<!--      高版本 bootstrap 生效 需添加-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
@@ -107,7 +108,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>2.6.3</version>
+<!--            <version>2.6.3</version>-->
         </dependency>
 
     </dependencies>
