--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <description>聚合服务</description>
     <packaging>pom</packaging>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.6.3</version>
+    </parent>
+
     <modules>
         <module>gulimall-coupon</module>
         <module>gulimall-member</module>
@@ -18,7 +24,6 @@
         <module>renren-fast</module>
         <module>renren-generator</module>
         <module>gulimall-common</module>
-        <module>test-nacos-config</module>
     </modules>
 
 <!--    <build>-->
