--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -1,23 +1,23 @@
-#spring:
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
-#    username: root
-#    password: 123123asd
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
-#  application:
-#    name: gulimall-coupon
-#
-#mybatis-plus:
-#  #  包扫描
-#  mapper-locations: classpath*:/mapper/**/*.xml
-#  #  主键自增
-#  global-config:
-#    db-config:
-#      id-type: auto
-#
-#server:
-#  port: 7000
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123123asd
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-coupon
+
+mybatis-plus:
+  #  包扫描
+  mapper-locations: classpath*:/mapper/**/*.xml
+  #  主键自增
+  global-config:
+    db-config:
+      id-type: auto
+
+server:
+  port: 7000
