--- a/gulimall-coupon/src/main/resources/bootstrap.yml
+++ b/gulimall-coupon/src/main/resources/bootstrap.yml
@@ -6,20 +6,20 @@ spring:
       config:
         server-addr: 127.0.0.1:8848 #nacos中心地址
         file-extension: yml # 配置文件格式
-        namespace: 946f9d08-da96-4139-9cdd-1e0e32864bb3
-        extension-configs:
-        - data-id: datasource-dev.yml
-          group: dev
-          refresh: true
-        - data-id: mybatis-dev.yml
-          group: dev
-          refresh: true
-        - data-id: nacos-dev.yml
-          group: dev
-          refresh: true
-        - data-id: port-dev.yml
-          group: dev
-          refresh: true
-  #        group: 1111
-  profiles:
-    active: dev # 环境标识
+#        namespace: 946f9d08-da96-4139-9cdd-1e0e32864bb3
+#        extension-configs:
+#        - data-id: datasource-dev.yml
+#          group: dev
+#          refresh: true
+#        - data-id: mybatis-dev.yml
+#          group: dev
+#          refresh: true
+#        - data-id: nacos-dev.yml
+#          group: dev
+#          refresh: true
+#        - data-id: port-dev.yml
+#          group: dev
+#          refresh: true
+#  #        group: 1111
+#  profiles:
+#    active: dev # 环境标识
