--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -13,6 +13,23 @@ spring:
           uri: https://www.qq.com
           predicates:
             - Query=uri,qq
+        - id: product_route
+          uri: lb://gulimall-product
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - StripPrefix=1
+        #            - RewritePath=/api/(?<segment>.*),/$\{segment}
+
+        # 前端项目, /api,  http://localhost:8888/captcha.jpg  ==> http://localhost:8080/renren-fast/captcha.jpg
+        - id: admin_route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
+
+
 
   application:
     name: gulimall-gateway
